# condor-eye

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.bat
.claude/commands/: screen.md
audio-mini-ui/: README.md  app.js  index.html  styles.css
docs/: app-audio-tap-project.md  aurora-condor-audio-handoff.md  condor-audio-extraction-schema.json  condor-audio-gate-and-extraction.md  condor-audio-next-phase.md  hive-condor-audio-next-phase.md  simple-audio-gui-replacement.md
docs/superpowers/plans/: 2026-03-11-visual-validator.md  2026-03-12-condor-eye-phase1.md  2026-04-06-condor-eye-macos-port.md
docs/superpowers/specs/: 2026-03-11-visual-validator-design.md  2026-03-12-condor-eye-design.md  2026-04-06-condor-eye-macos-port-design.md
mcp/: index.js  package-lock.json  package.json
profiles/: candle.json  custom.json  depth.json  heatmap.json  quote.json  rtm.json
site/: index.html
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  audio_ui.html  audio_watcher.rs  capture.rs  claude.rs  compare.rs  config.rs  http_api.rs  main.rs  review.rs  truth.rs  windows.rs
