[package]
name = "visual-validator"
version = "0.1.0"
edition = "2021"
description = "Visual data validator using Claude AI vision"

[dependencies]
tauri = { version = "2", features = ["transparent"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
screenshots = "0.8"
image = "0.25"

[build-dependencies]
tauri-build = { version = "2", features = [] }
