[package]
name = "condor-eye"
version = "0.1.0"
edition = "2021"
description = "Condor Eye — AI vision tool for screen capture and analysis"
license = "MIT"
repository = "https://github.com/CondorCommodore/condor-eye"
homepage = "https://github.com/CondorCommodore/condor-eye"
authors = ["CondorCommodore"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time", "net"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
screenshots = "0.8"
image = "0.25"
redis = "0.27"
dotenvy = "0.15"
axum = "0.8"
hound = "3.5"
time = { version = "0.3", features = ["parsing", "formatting"] }

[target.'cfg(windows)'.dependencies]
wasapi = "0.22"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
